...
        title = {
            Column {
                Text(
                    when {
                        inspectionActive -> "Tracking Inspection"
                        manualDrawingActive -> "Draw route"
                        else -> "Kartoffel"
                    },
                )
                if (!inspectionActive) Text(
                    modifier = Modifier.testTag("passive_tracking_status"),
                    text = if (isRecordingSession) {
                        if (isPassiveTrackingEnabled) {
...
            IconButton(
                modifier = Modifier.testTag("settings_diagnostics_menu"),
                onClick = { menuExpanded = true },
            ) {
                Icon(
                    painter = painterResource(R.drawable.ic_more_vert_24),
                    contentDescription = "More options",
                )
            }
            DropdownMenu(
                expanded = menuExpanded,
                onDismissRequest = { menuExpanded = false },
            ) {
...
